Simplify render type handling, remove uncached non-camo render types, clean up flower pot geometry